--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
         integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
+
+    <!-- CSS link -->
+    <link rel="stylesheet" href="css/estilo.css">
+
     <title>Finans - finanças pessoais</title>
 </head>
 
@@ -32,7 +36,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="callpse navbar-collapse" id="nav-principal">
+                <div class="collapse navbar-collapse" id="nav-principal">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
                             <a href="" class="nav-link">Home</a>
@@ -70,11 +74,37 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-md-6">
-                    texto
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h1>Suas contas, descomplicadas</h1>
+                        <p>
+                            Usado por mais de 1 milhão de pessoas, o Finans é uma ferramenta online que vai facilitar
+                            sua vida financeira.
+                        </p>
+
+                        <form action="" class="mt-4 mb-4">
+                            <div class="input-group input-group-lg">
+                                <input type="text" placeholder="Seu e-mail" class="form-control">
+                                <div class="input-group-append">
+                                    <button type="button" class="btn btn-primary">
+                                        Cadastre-se
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+
+                        <p>Disponível para
+                            <a href="" class="btn btn-outline-light">
+                                <i class="fab fa-android fa-lg"></i>
+                            </a>
+                            <a href="" class="btn btn-outline-light">
+                                <i class="fab fa-apple fa-lg"></i>
+                            </a>
+                        </p>
+                    </div>
                 </div>
-                <div class="col-md-6">
-                    imagem
+                <div class="col-md-6 d-none d-md-block">
+                    <img src="img/capa-mulher.png" alt="">
                 </div>
             </div>
 
@@ -84,6 +114,123 @@
 
 
     </section>
+
+
+
+    <section class="caixa">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h2>Saiba para onde vai o seu dinheiro</h2>
+                        <p>
+                            Com o Finans, você categoriza todos os seus lançamentos.Com gráficos simples, você sabe de
+                            onde vem e para onde vai o seu dinheiro.
+                        </p>
+                        <a href="" class="btn btn-primary">Veja mais</a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <img src="img/saiba.png" class="img-fluid" alt="">
+                </div>
+            </div>
+        </div>
+
+
+    </section>
+
+
+
+    <section class="caixa">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="img/juros.png" class="img-fluid" alt="">
+                </div>
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h2>Pare de pagar juros e economize</h2>
+                        <p>
+                            Manter as contas em dia é sempre um problema? O Finans avisa você: receba alertas de contas
+                            a pagar e a receber!
+                        </p>
+                        <a href="" class="btn btn-primary">Veja mais</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+    </section>
+
+    <section class="caixa">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="img/facil.png" class="img-fluid" alt="">
+                    <h4>Fácil de usar</h4>
+                    <p>
+                        O Finans vai além do básico e permite que você faça controles incríveis, essenciais para suas finanças. Simples como tem que ser!
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <img src="img/economize.png" class="img-fluid" alt="">
+                    <h4>Economize seu tempo</h4>
+                    <p>
+                        Tempo é dinheiro! Em segundos, você tem tudo sob controle e aproveite seu tempo com o que realmente importa para você!
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <img src="img/suporte.png" class="img-fluid" alt="">
+                    <h4>Suporte amigo</h4>
+                    <p>
+                        Dúvidas? Perguntas? Nosso suporte super legal ajuda você! A gente tá aqui para resolver seus problemas e deixar sua vida bem mais fácil!
+                    </p>
+                </div>
+
+            </div>
+        </div>
+
+
+    </section>
+
+    
+
+    <footer class="mt-4 mb-4">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8">
+                    <p>
+                        <a href="">Home</a>
+                        <a href="">Recursos</a>
+                        <a href="">Benefícios</a>
+                        <a href="">Preços</a>
+                    </p>
+                </div>
+                <div class="col-md-4 d-flex justify-content-end">
+                    <a href="" class="btn btn-outline-dark ml-2">
+                        <i class="fab fa-facebook fa-lg"></i>
+                    </a>
+                    <a href="" class="btn btn-outline-dark ml-2">
+                        <i class="fab fa-twitter fa-lg"></i>
+                    </a>
+                    <a href="" class="btn btn-outline-dark ml-2">
+                        <i class="fab fa-instagram fa-lg"></i>
+                    </a>
+                    <a href="" class="btn btn-outline-dark ml-2">
+                        <i class="fab fa-youtube fa-lg"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+
+    </footer>
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
